--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="modal__score"></div>
         <ul class="modal__finish-buttons">
             <li>
-                <button class=' modal__button restart'>Restart</button>
+                <button class=' modal__button btn-restart'>Restart</button>
             </li>
             <li>
-                <button class=' modal__button main-page'>На главную</button>
+                <button class=' modal__button btn-to-main-page'>На главную</button>
             </li>
         </ul>
     </div>
