--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         <!--        <div class="circle"></div>-->
     </div>
     <div class="modal">
+        <button class=' modal__button btn-results'>Результаты</button>
         <div class="modal__score"></div>
         <ul class="modal__finish-buttons">
             <li>
-                <button class=' modal__button btn-restart'>Restart</button>
+                <button class=' modal__button btn-restart'>Играть снова</button>
             </li>
             <li>
                 <button class=' modal__button btn-to-main-page'>На главную</button>
