--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
 <section class='card '>
-    <h1 class="title">AIM Training</h1>
+    <h1 class="title">Поймай точку &#129321</h1>
     <a href="#" class="start" id="start">Начать игру</a>
 </section>
 
